--- a/web/seconda-app/package.json
+++ b/web/seconda-app/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
+    "jason-server": "^3.0.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
